--- a/index.html
+++ b/index.html
@@ -227,18 +227,19 @@
     }
 
     async function viewProgress() {
-  const data = await fetchData();
-  let msg = '';
-  const days = ['السبت', 'الأحد', 'الاثنين', 'الثلاثاء', 'الأربعاء', 'الخميس', 'الجمعة'];
-  for (let user in data.progress) {
-    msg += `${user}:\n`;
-    data.progress[user].forEach((day, i) => {
-      msg += `  يوم ${days[i]}: ${day.count || 0} مهام\n`;
-    });
-  }
-  alert(msg);
-}
-
+      const data = await fetchData();
+      let msg = '';
+      for (let user in data.progress) {
+        if (isAdmin || user === currentUser) {
+          msg += `${user}:
+`;
+          data.progress[user].forEach((day, i) => {
+            msg += `  يوم ${i + 1}: ${day.count || 0} مهام\n`;
+          });
+        }
+      }
+      alert(msg);
+    }
   </script>
 </body>
 </html>
